@@ -1,5 +1,6 @@
 package com.mt1006.mocap.command.commands;
 
+import com.mojang.brigadier.arguments.BoolArgumentType;
 import com.mojang.brigadier.arguments.IntegerArgumentType;
 import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
@@ -23,7 +24,8 @@ public class PlaybackCommand
 			then(CommandUtils.playerArguments(buildContext, CommandUtils.command(PlaybackCommand::start)))));
 		commandBuilder.then(Commands.literal("stop").
 			then(Commands.argument("id", IntegerArgumentType.integer()).executes(CommandUtils.command(PlaybackCommand::stop))));
-		commandBuilder.then(Commands.literal("stop_all").executes(CommandUtils.command((info) -> Playing.stopAll(info, null)))); //TODO: todo
+		commandBuilder.then(Commands.literal("stop_all").executes(CommandUtils.command(PlaybackCommand::stopAll)). //TODO: better stop_all messages
+				then(Commands.argument("for_all_players", BoolArgumentType.bool()).executes(CommandUtils.command(PlaybackCommand::stopAll))));
 		commandBuilder.then(Commands.literal("modifiers").
 			then(CommandUtils.withModifiers(buildContext, Commands.literal("set"), CommandUtils.command(Playing::modifiersSet), false)).
 			then(Commands.literal("list").executes(CommandUtils.command(Playing::modifiersList))).
@@ -67,11 +69,25 @@ public class PlaybackCommand
 		{
 			int id = commandInfo.getInteger("id");
 			Playing.stop(commandInfo, id);
+			return true;
 		}
 		catch (IllegalArgumentException e)
 		{
 			commandInfo.sendException(e, "error.unable_to_get_argument");
 			return false;
+		}
+	}
+
+	private static boolean stopAll(CommandInfo commandInfo)
+	{
+		try
+		{
+			boolean forAllPlayers = commandInfo.getBool("for_all_players");
+			Playing.stopAll(commandInfo, forAllPlayers ? null : commandInfo.sourcePlayer);
+		}
+		catch (IllegalArgumentException e)
+		{
+			Playing.stopAll(commandInfo, commandInfo.sourcePlayer);
 		}
 		return true;
 	}
