@@ -18,6 +18,7 @@
 -Replaced "recording_sync" setting with "/mocap misc sync" command.
 -Renamed settings: "playing_speed" to "playback_speed", "play_block_actions" to "block_actions_playback", "set_block_states" to "block_initialization".
 -Changed settings, command names and command arguments naming convention from lower camel case to snake case.
+-Added "for_all_players" optional argument to "/mocap playback stop_all".
 -Renamed "from_..." to "skin_from_..." simple modifiers in "playback start" and "scene add_to" commands.
 -It's now possible to add player_as_entity modifier using simple modifiers (thanks to Narfu for suggestion).
 -Item types and block states are now stored using string IDs (instead of numeric IDs), providing better compatibility between different Minecraft versions and modpacks.
